competed todo features
when you mark a todo as completed, it now moves to the bottom of the lift. when you a todo as uncompleted, it moves back up.

also, new styles for completed todos to make it more obvious it is completed.

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
 
             <ul id="list"></ul>
 
-            <p id="intro">whitelist is a free, easy to use, to do list manager by chip cressman</p>
+            <p id="intro">whitelist is a free, easy to use, to do list by chip cressman</p>
 
             <button id="signIn" class="btn facebook"><i class="fa fa-facebook"></i>Sign in with Facebook</button>
 
@@ -112,7 +112,6 @@
                 <div class="remove">
                     <i class="fa fa-trash-o"></i>
                 </div>
-
             </li>
         </script>
 </body>
