images, gulp, docs
add new background images
update the gulpfile to do a clean during build
add docs folder

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <title>whitelist</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-touch-icon-57x57.png" />
@@ -56,13 +58,19 @@
                 <button id="signOut" class="btn"><i class="fa fa-sign-out"></i>Sign out</button>
 
                 <ul id="backgrounds">
+                    <li class="arches"></li>
                     <li class="brickwall"></li>
                     <li class="cream_pixels"></li>
                     <li class="crossword"></li>
                     <li class="dimension"></li>
+                    <li class="gplaypattern"></li>
                     <li class="greyzz"></li>
+                    <li class="grunge_wall"></li>
+                    <li class="large_leather"></li>
+                    <li class="linedpaper"></li>
                     <li class="ps_neutral"></li>
                     <li class="pw_pattern"></li>
+                    <li class="tiny_grid"></li>
                     <li class="tree_bark"></li>
                     <li class="wet_snow"></li>
                 </ul>
